-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.9.0, Lustre 2.10.0
-
None
-
3
-
9223372036854775807
During the OST failover, it was reported:
2016-12-05 02:42:07 [115035.688184] LustreError: 138-a: fs1-OST0001: A client on nid 172.18.1.103@o2ib was evicted due to a lock completion callback time out: rc -19
On the client side, IOR got I/O failure:
bluepill-client03: IOR-3.0.1: MPI Coordinated Test of Parallel I/O bluepill-client03: bluepill-client03: Began: Sun Dec 4 18:28:38 2016 bluepill-client03: Command line used: /usr/local/bin/IOR -o /mnt/fs1//ha.sh-111769/bluepill-client03-ior/f.ior -f /test-tools/grev/Cray/2016_snx2k_fvt.ior.shared_file.p ... bluepill-client03: clients = 88 (8 per node) ... bluepill-client03: Commencing read performance test: Mon Dec 5 02:34:58 2016 bluepill-client03: ior ERROR: read() failed, errno 5, Input/output error (aiori-POSIX.c:250)